--- a/UnitTestComponents/MainPage.xaml
+++ b/UnitTestComponents/MainPage.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:UnitTestComponents"
     xmlns:telerik="http://schemas.telerik.com/2022/xaml/maui"
+    Title="Sample app, main page to show off controls (see xunit proj for main discussion points)"
     x:DataType="local:MainPageViewModel">
 
     <Grid
